fix homepage alignment

--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@
   border-color: #415A77;
 }
 
-.col-lg-4>.btn {
+.col-lg-6>.btn {
   background-color: #415A77;
   color: white;
   border-color: #415A77;
